--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -10,11 +10,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
 
-      - name: Install and Build
-        run: npm install && npm run parcel-build
-
-      - name: Build and Deploy
-        uses: JamesIves/github-pages-deploy-action@4.1.5
-        with:
-          branch: gh-pages
-          folder: dist
+#      - name: Install and Build
+#        run: npm install && npm run parcel-build
+#
+#      - name: Build and Deploy
+#        uses: JamesIves/github-pages-deploy-action@4.1.5
+#        with:
+#          branch: gh-pages
+#          folder: dist
