--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -10,8 +10,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
 
-#      - name: Install and Build
-#        run: npm install && npm run parcel-build
+      - name: Install and Build
+        run: npm install && npm run parcel-build
 #
 #      - name: Build and Deploy
 #        uses: JamesIves/github-pages-deploy-action@4.1.5
