--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "parcel": "parcel -p 4444 index.html"
+    "parcel-watch": "parcel -p 4444 index.html",
+    "parcel-build": "parcel build index.html"
   },
   "author": "",
   "license": "ISC",
