--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -12,6 +12,9 @@ jobs:
 
       - name: Install and Build
         run: npm install && npm run parcel-build
+
+      - name: ls -la
+        run: ls -la
 #
 #      - name: Build and Deploy
 #        uses: JamesIves/github-pages-deploy-action@4.1.5
