--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -15,9 +15,12 @@ jobs:
 
       - name: ls -la
         run: ls -la
-#
-#      - name: Build and Deploy
-#        uses: JamesIves/github-pages-deploy-action@4.1.5
-#        with:
-#          branch: gh-pages
-#          folder: dist
+
+      - name: Build and Deploy
+        uses: JamesIves/github-pages-deploy-action@4.1.5
+        with:
+          branch: gh-pages
+          folder: dist
+
+      - name: ls -la
+        run: ls -la
