--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -17,10 +17,11 @@ jobs:
         run: ls -la
 
       - name: Build and Deploy
-        uses: JamesIves/github-pages-deploy-action@4.1.5
+        uses: JamesIves/github-pages-deploy-action@main
         with:
           branch: gh-pages
           folder: dist
+          dry-run: true
 
       - name: ls -la
         run: ls -la
