--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -2,7 +2,7 @@ name: Deploy_videoplayer_to_GitHub_Pages
 on:
   push:
     branches:
-      - gh-pages
+      - main
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -21,7 +21,7 @@ jobs:
         with:
           branch: gh-pages
           folder: dist
-          dry-run: true
+#          dry-run: true
 
       - name: ls -la
         run: ls -la
