--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "parcel-watch": "parcel -p 4444 index.html",
-    "parcel-build": "parcel build index.html"
+    "parcel-build": "parcel build index.html --public-url ./"
   },
   "author": "",
   "license": "ISC",
